force-app/main/default/objects/Opportunity/fields/Date_Training_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Training_Booked__c</fullName>
    <description>What date is the training booked for?</description>
    <label>Date Training Booked</label>
    <type>Date</type>
</CustomField>