force-app/main/default/objects/Opportunity/fields/Date_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Training_Completed__c</fullName>
    <description>What date was the training completed?</description>
    <label>Date Training Completed</label>
    <type>Date</type>
</CustomField>