force-app/main/default/objects/Opportunity/fields/Days_since_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Closed_Lost__c</fullName>
    <formula>TODAY() -  Closed_Lost_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Closed Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>