force-app/main/default/objects/Opportunity/fields/Declined_Cover_Offences__c.field-meta.xml
<CustomField>
    <fullName>Declined_Cover_Offences__c</fullName>
    <label>Declined Cover Offences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>