force-app/main/default/objects/Opportunity/fields/DELETE_Individual_Referred_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>DELETE_Individual_Referred_by_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Person Account which referred the Lead that led to the Opportunity</description>
    <label>DELETE_Individual Referred by Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Individual Referred by Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>