force-app/main/default/objects/Opportunity/fields/Do_you_currently_hold_Business_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_hold_Business_Insurance__c</fullName>
    <label>Do you currently hold Business Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>