force-app/main/default/objects/Opportunity/fields/Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>