force-app/main/default/objects/Opportunity/fields/Earliest_Agreement_Date_45__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Agreement_Date_45__c</fullName>
    <formula>Earliest_Agreement_Date__c  - 45 = TODAY()</formula>
    <label>Earliest Agreement Date - 45</label>
    <type>Checkbox</type>
</CustomField>