force-app/main/default/objects/Opportunity/fields/Earliest_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Agreement_Date__c</fullName>
    <formula>CASE(
 MIN(
UNIXTIMESTAMP( Agreement_End_Date_PL_Affiliate__c ), 
UNIXTIMESTAMP( Agreement_End_Date_IR35_HC__c ),
UNIXTIMESTAMP( Agreement_End_Date_PL_TradeBody__c ),
UNIXTIMESTAMP( Agreement_End_Date_OPP__c ),
UNIXTIMESTAMP( Agreement_End_Date_PI_Audit__c ),
UNIXTIMESTAMP( Agreement_End_Date_IR35__c ),
UNIXTIMESTAMP( Agreement_End_Date_PI__c ),
UNIXTIMESTAMP( Agreement_End_Date_IR35_Protect__c )


),
    UNIXTIMESTAMP(Agreement_End_Date_PL_Affiliate__c ), Agreement_End_Date_PL_Affiliate__c ,
    UNIXTIMESTAMP(Agreement_End_Date_IR35_HC__c ), Agreement_End_Date_IR35_HC__c ,
   UNIXTIMESTAMP(Agreement_End_Date_PL_TradeBody__c ), Agreement_End_Date_PL_TradeBody__c ,
   UNIXTIMESTAMP(Agreement_End_Date_OPP__c ), Agreement_End_Date_OPP__c ,
   UNIXTIMESTAMP(Agreement_End_Date_PI_Audit__c ), Agreement_End_Date_PI_Audit__c ,
   UNIXTIMESTAMP(Agreement_End_Date_IR35__c ), Agreement_End_Date_IR35__c ,
   UNIXTIMESTAMP(Agreement_End_Date_PI__c ), Agreement_End_Date_PI__c ,
   UNIXTIMESTAMP(Agreement_End_Date_IR35_Protect__c ), Agreement_End_Date_IR35_Protect__c ,

    null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Agreement Date</label>
    <type>Date</type>
</CustomField>