force-app/main/default/objects/Opportunity/fields/Early_Adopter__c.field-meta.xml
<CustomField>
    <fullName>Early_Adopter__c</fullName>
    <label>Early Adopter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highlighted</fullName>
            </value>
            <value>
                <fullName>Conversation had</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>