force-app/main/default/objects/Opportunity/fields/Employer_End_Client__c.field-meta.xml
<CustomField>
    <fullName>Employer_End_Client__c</fullName>
    <label>Employer/End Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>