force-app/main/default/objects/Opportunity/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <description>Name of end client</description>
    <label>End Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>