force-app/main/default/objects/Opportunity/fields/End_Client_Contract__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Contract__c</fullName>
    <label>End Client Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>