force-app/main/default/objects/Opportunity/fields/ERN_Number__c.field-meta.xml
<CustomField>
    <fullName>ERN_Number__c</fullName>
    <label>ERN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>