force-app/main/default/objects/Opportunity/fields/Escalation_Process_Enforced__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Process_Enforced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there proof of escalation process enforcement?</description>
    <label>Escalation Process Enforced</label>
    <type>Checkbox</type>
</CustomField>