force-app/main/default/objects/Opportunity/fields/Existing_Clients_Renewal_Date_Capture_Pr__c.field-meta.xml
<CustomField>
    <fullName>Existing_Clients_Renewal_Date_Capture_Pr__c</fullName>
    <inlineHelpText>Existing Clients Renewal Date Capture Process</inlineHelpText>
    <label>Existing Clients Renewal Date Capture Pr</label>
    <type>Date</type>
</CustomField>