force-app/main/default/objects/Opportunity/fields/Existing_Customer_Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Touch_Point__c</fullName>
    <label>Existing Customer Touch Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>