force-app/main/default/objects/Opportunity/fields/F2F_or_Teams__c.field-meta.xml
<CustomField>
    <fullName>F2F_or_Teams__c</fullName>
    <label>F2F or Teams</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>