force-app/main/default/objects/Opportunity/fields/Failed_Payment__c.field-meta.xml
<CustomField>
    <fullName>Failed_Payment__c</fullName>
    <formula>AND(
!Tacit_Decline__c,
RecordType.DeveloperName = &apos;Auto_Renewal_Opportunity&apos;,
Account.Auto_Renew__c,
!IsClosed,
DATEVALUE(Policy_Inception_Date__c) - TODAY() &lt;= 6,
DATEVALUE(Policy_Inception_Date__c) &gt; TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates an Open Auto Renew Opportunities that hasn&apos;t been Closed 6 days before expiry and hasn&apos;t already been processed</inlineHelpText>
    <label>Failed Payment</label>
    <type>Checkbox</type>
</CustomField>