force-app/main/default/objects/Opportunity/fields/Features_of_interest_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Features_of_interest_Meeting__c</fullName>
    <description>What features are they interested in from the Meeting?</description>
    <label>Features of interest - Meeting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Right to work</fullName>
            </value>
            <value>
                <fullName>Credit Checks</fullName>
            </value>
            <value>
                <fullName>DBS Checks</fullName>
            </value>
            <value>
                <fullName>Employment Refs</fullName>
            </value>
            <value>
                <fullName>Ltd Company Status</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>CRM Int</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>