force-app/main/default/objects/Opportunity/fields/Feedback_Notes_IR35_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notes_IR35_Health_Check__c</fullName>
    <label>Feedback/Notes (IR35 Health Check)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>