force-app/main/default/objects/Opportunity/fields/Feedback_Notes_OPP__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notes_OPP__c</fullName>
    <label>Feedback/Notes (OPP)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>