force-app/main/default/objects/Opportunity/fields/FeedbackNotes__c.field-meta.xml
<CustomField>
    <fullName>FeedbackNotes__c</fullName>
    <label>Feedback/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>