force-app/main/default/objects/Opportunity/fields/First_Bordereau_Number_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bordereau_Number_Submitted_Date__c</fullName>
    <label>First Bordereau Number Submitted Date</label>
    <type>Date</type>
</CustomField>