force-app/main/default/objects/Opportunity/fields/First_Quoted_By__c.field-meta.xml
<CustomField>
    <fullName>First_Quoted_By__c</fullName>
    <label>First Quoted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>