force-app/main/default/objects/Opportunity/fields/Follow_Up_Done__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Done? (PL Affiliate)</label>
    <type>Checkbox</type>
</CustomField>