force-app/main/default/objects/Opportunity/fields/Follow_Up_Done_PL_Trade_Body__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Done_PL_Trade_Body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Done? (PL Trade Body)</label>
    <type>Checkbox</type>
</CustomField>