force-app/main/default/objects/Opportunity/fields/Found_Via__c.field-meta.xml
<CustomField>
    <fullName>Found_Via__c</fullName>
    <formula>Account.Found_Via__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Found Via</label>
    <type>Text</type>
</CustomField>