force-app/main/default/objects/Opportunity/fields/Found_Via_Info__c.field-meta.xml
<CustomField>
    <fullName>Found_Via_Info__c</fullName>
    <formula>Account.Found_Via_Info__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Found Via Info</label>
    <type>Text</type>
</CustomField>