force-app/main/default/objects/Opportunity/fields/gaconngaconnector_GCLIDector_GCLID__c.field-meta.xml
<CustomField>
    <fullName>gaconngaconnector_GCLIDector_GCLID__c</fullName>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>