force-app/main/default/objects/Opportunity/fields/Getting_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Getting_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Getting Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>