force-app/main/default/objects/Opportunity/fields/Getting_Agreement_Signed_Reminder_Today__c.field-meta.xml
<CustomField>
    <fullName>Getting_Agreement_Signed_Reminder_Today__c</fullName>
    <description>Used as criteria of Opportunity: Scheduled - Getting Agreement Signed Reminder</description>
    <formula>Next_Getting_Agreement_Signed_Reminder__c = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Getting Agreement Signed Reminder Today</label>
    <type>Checkbox</type>
</CustomField>