force-app/main/default/objects/Opportunity/fields/Group_Insurance_Check__c.field-meta.xml
<CustomField>
    <fullName>Group_Insurance_Check__c</fullName>
    <description>Field is used to determine whether Group Insurance is part of the product type field, used to display the Group Insurance section on the dynamic page layout</description>
    <formula>IF( INCLUDES( Product_Type__c , &quot;Group Insurance&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Insurance Check</label>
    <type>Checkbox</type>
</CustomField>