force-app/main/default/objects/Opportunity/fields/Group_Insurance_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Group_Insurance_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Insurance Decision Maker?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Group Insurance Decision Maker?)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>