force-app/main/default/objects/Opportunity/fields/Has_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Has_Accountant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Accountant</label>
    <type>Checkbox</type>
</CustomField>