force-app/main/default/objects/Opportunity/fields/How_KB_Fits_Into_Process__c.field-meta.xml
<CustomField>
    <fullName>How_KB_Fits_Into_Process__c</fullName>
    <label>How KB Fits Into Process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>