force-app/main/default/objects/Opportunity/fields/How_Many_Agents_to_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Agents_to_Set_Up__c</fullName>
    <description>How many agents need to be set up?</description>
    <label>How Many Agents to Set Up</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>