force-app/main/default/objects/Opportunity/fields/How_many_contractors__c.field-meta.xml
<CustomField>
    <fullName>How_many_contractors__c</fullName>
    <label>How many contractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>