force-app/main/default/objects/Opportunity/fields/How_many_Ltd_workers__c.field-meta.xml
<CustomField>
    <fullName>How_many_Ltd_workers__c</fullName>
    <description>How many Ltd company workers do they have in total?</description>
    <label>How many Ltd workers?(IR35 Health Check)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>