force-app/main/default/objects/Opportunity/fields/How_many_Ltd_workers_OPP__c.field-meta.xml
<CustomField>
    <fullName>How_many_Ltd_workers_OPP__c</fullName>
    <label>How Many Ltd’s (OPP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>