force-app/main/default/objects/Opportunity/fields/How_many_Ltd_workers_PI_Audit__c.field-meta.xml
<CustomField>
    <fullName>How_many_Ltd_workers_PI_Audit__c</fullName>
    <label>How many Ltd workers? (PI Audit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>