force-app/main/default/objects/Opportunity/fields/How_many_ltds_monthly__c.field-meta.xml
<CustomField>
    <fullName>How_many_ltds_monthly__c</fullName>
    <label>How many ltds monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>