force-app/main/default/objects/Opportunity/fields/How_many_UK_Ltds__c.field-meta.xml
<CustomField>
    <fullName>How_many_UK_Ltds__c</fullName>
    <label>How many UK Ltds?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>