force-app/main/default/objects/Opportunity/fields/How_Many_Uninsured_Ltd_Workers__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Uninsured_Ltd_Workers__c</fullName>
    <description>How many uninsured LTD company workers are there?</description>
    <label>How Many Uninsured Ltd Workers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>