force-app/main/default/objects/Opportunity/fields/How_will_Kingsbridge_fit_into_onboarding__c.field-meta.xml
<CustomField>
    <fullName>How_will_Kingsbridge_fit_into_onboarding__c</fullName>
    <label>How will Kingsbridge fit into onboarding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>