force-app/main/default/objects/Opportunity/fields/IAR_Needed__c.field-meta.xml
<CustomField>
    <fullName>IAR_Needed__c</fullName>
    <label>IAR Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>