force-app/main/default/objects/Opportunity/fields/IAR_uploaded__c.field-meta.xml
<CustomField>
    <fullName>IAR_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAR uploaded</label>
    <type>Checkbox</type>
</CustomField>