force-app/main/default/objects/Opportunity/fields/Implementation_Meeting_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Meeting_Attended_Date__c</fullName>
    <label>Implementation Meeting Attended Date</label>
    <type>Date</type>
</CustomField>