force-app/main/default/objects/Opportunity/fields/Individual_Referred_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>Individual_Referred_by_Contact__c</fullName>
    <description>Instanda API Mapping field for PartnerCompanyPerson</description>
    <label>Individual Referred by Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>