force-app/main/default/objects/Opportunity/fields/Industry_1__c.field-meta.xml
<CustomField>
    <fullName>Industry_1__c</fullName>
    <label>Industry 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>