force-app/main/default/objects/Opportunity/fields/Industry_2__c.field-meta.xml
<CustomField>
    <fullName>Industry_2__c</fullName>
    <label>Industry 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>