force-app/main/default/objects/Opportunity/fields/Industry_4__c.field-meta.xml
<CustomField>
    <fullName>Industry_4__c</fullName>
    <label>Industry 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>