force-app/main/default/objects/Opportunity/fields/Initial_Contact_Cadence_completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Cadence_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Contact Cadence completed</label>
    <type>Checkbox</type>
</CustomField>