force-app/main/default/objects/Opportunity/fields/Insurance_Audit_Check__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Audit_Check__c</fullName>
    <description>Field is used to determine whether Insurance Audit is part of the product type field, used to display the Insurance Audit section on the dynamic page layout</description>
    <formula>IF( INCLUDES( Product_Type__c , &quot;Insurance Audit&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Audit Check</label>
    <type>Checkbox</type>
</CustomField>