force-app/main/default/objects/Opportunity/fields/Insurance_Previously_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Previously_Discussed__c</fullName>
    <description>Was there already a recommendation of business insurance or risk mitigation in place?</description>
    <label>Insurance Previously Discussed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>