force-app/main/default/objects/Opportunity/fields/Insurance_Process_Manager_Insurance_Audi__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Process_Manager_Insurance_Audi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who manages the insurance process?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who manages the insurance process?)</relationshipLabel>
    <relationshipName>OpportunitiesWQGf</relationshipName>
    <type>Lookup</type>
</CustomField>