force-app/main/default/objects/Opportunity/fields/Insurance_Process_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Process_Meeting_Booked__c</fullName>
    <description>What date is the Insurance Process Meeting booked for?</description>
    <label>Insurance Process Meeting Booked</label>
    <type>Date</type>
</CustomField>