force-app/main/default/objects/Opportunity/fields/Insured_with_KB__c.field-meta.xml
<CustomField>
    <fullName>Insured_with_KB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insured with KB</label>
    <type>Checkbox</type>
</CustomField>