force-app/main/default/objects/Opportunity/fields/Insurer_Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Time_Taken__c</fullName>
    <formula>Referral_Date_Concluded__c - Referral_Date_to_insurers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurer Time Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>