force-app/main/default/objects/Opportunity/fields/Integrated_Q_B_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Q_B_Implemented__c</fullName>
    <label>Integrated Q&amp;B Implemented</label>
    <length>255</length>
    <type>Text</type>
</CustomField>