force-app/main/default/objects/Opportunity/fields/Integrated_QB_Journey__c.field-meta.xml
<CustomField>
    <fullName>Integrated_QB_Journey__c</fullName>
    <label>Integrated QB Journey?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>