force-app/main/default/objects/Opportunity/fields/Interest_after_demo__c.field-meta.xml
<CustomField>
    <fullName>Interest_after_demo__c</fullName>
    <description>How interested are they in KB Elements?</description>
    <label>Interest after demo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1- wants to buy now</fullName>
            </value>
            <value>
                <fullName>2- wants to buy later</fullName>
            </value>
            <value>
                <fullName>3 - not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>