force-app/main/default/objects/Opportunity/fields/Interest_After_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Interest_After_Proposal__c</fullName>
    <description>What is the level of interest after the proposal?</description>
    <label>Interest After Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - High</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>