force-app/main/default/objects/Opportunity/fields/Introducer_agreement_signed_IR35_PI__c.field-meta.xml
<CustomField>
    <fullName>Introducer_agreement_signed_IR35_PI__c</fullName>
    <label>Introducer agreement signed (IR35-PI)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>