force-app/main/default/objects/Opportunity/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <description>The invoice amount.</description>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>