force-app/main/default/objects/Opportunity/fields/IR35_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>IR35_Decision_Maker__c</fullName>
    <description>Who is the IR35 insurance decision maker?</description>
    <label>IR35 Decision Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>