force-app/main/default/objects/Opportunity/fields/IR35_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>IR35_Health_Check__c</fullName>
    <formula>IF( INCLUDES( Product_Type__c , &quot;IR35 Health Check&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IR35 Health Check</label>
    <type>Checkbox</type>
</CustomField>