force-app/main/default/objects/Opportunity/fields/IR35_Paragraph_inserted__c.field-meta.xml
<CustomField>
    <fullName>IR35_Paragraph_inserted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR35 Paragraph inserted</label>
    <type>Checkbox</type>
</CustomField>