force-app/main/default/objects/Opportunity/fields/IR35_Paragraph_wording__c.field-meta.xml
<CustomField>
    <fullName>IR35_Paragraph_wording__c</fullName>
    <label>IR35 Paragraph wording</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>