force-app/main/default/objects/Opportunity/fields/IR35_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>IR35_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IR35 Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (IR35 Project Manager)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>