force-app/main/default/objects/Opportunity/fields/IR35_Project_Manager_IR35_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>IR35_Project_Manager_IR35_Health_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IR35 Project Manager (IR35 Health Check</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (IR35 Project Manager (IR35 Health Check)</relationshipLabel>
    <relationshipName>OpportunitiesUyY6</relationshipName>
    <type>Lookup</type>
</CustomField>