force-app/main/default/objects/Opportunity/fields/IR35_Protect_Insurance_Check__c.field-meta.xml
<CustomField>
    <fullName>IR35_Protect_Insurance_Check__c</fullName>
    <description>Field is used to determine whether IR35 Protect Insurance is part of the product type field, used to display the IR35 Protect Insurance section on the dynamic page layout</description>
    <formula>IF( INCLUDES( Product_Type__c , &quot;IR35 Protect Insurance&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IR35 Protect Insurance Check</label>
    <type>Checkbox</type>
</CustomField>