force-app/main/default/objects/Opportunity/fields/IR35_Secure_confirmed__c.field-meta.xml
<CustomField>
    <fullName>IR35_Secure_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR35 Secure confirmed</label>
    <type>Checkbox</type>
</CustomField>