force-app/main/default/objects/Opportunity/fields/IR35_Sell_Training_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>IR35_Sell_Training_Booked_Date__c</fullName>
    <label>IR35 Sell Training Booked Date</label>
    <type>Date</type>
</CustomField>