force-app/main/default/objects/Opportunity/fields/IR35_Status_Tool_Fee__c.field-meta.xml
<CustomField>
    <fullName>IR35_Status_Tool_Fee__c</fullName>
    <description>IR35StatusToolFee Instanda API Mapping Field</description>
    <label>IR35 Status Tool Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>