force-app/main/default/objects/Opportunity/fields/IR35Product__c.field-meta.xml
<CustomField>
    <fullName>IR35Product__c</fullName>
    <formula>CONTAINS(Product_Type_Formula__c,&quot;IR35&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IR35 Product?</label>
    <type>Checkbox</type>
</CustomField>