force-app/main/default/objects/Opportunity/fields/IR_35_Tool_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>IR_35_Tool_Approval_Status__c</fullName>
    <label>IR35 Tool Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>