force-app/main/default/objects/Opportunity/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Contact for this Wholesale Onboarding Opportunity.</description>
    <label>Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Key Contact)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>