force-app/main/default/objects/Opportunity/fields/Landing_Pages_Required__c.field-meta.xml
<CustomField>
    <fullName>Landing_Pages_Required__c</fullName>
    <description>Any landing pages to be built by either party?</description>
    <label>Landing Pages Required? (PL Affiliate)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>